feat: remove permission
