# app/admin/service/dto/sys_user.go
@@ -131,18 +131,18 @@ func (s *SysUserInsertReq) GetId() interface{} {
 }
 
 type SysUserUpdateReq struct {
-	UserId   int    `json:"userId" comment:"用户ID"` // 用户ID
-	Username string `json:"username" comment:"用户名" vd:"len($)>0"`
-	NickName string `json:"nickName" comment:"昵称" vd:"len($)>0"`
-	Phone    string `json:"phone" comment:"手机号" vd:"len($)>0"`
-	RoleId   int    `json:"roleId" comment:"角色ID"`
-	Avatar   string `json:"avatar" comment:"头像"`
-	Sex      string `json:"sex" comment:"性别"`
-	Email    string `json:"email" comment:"邮箱" vd:"len($)>0,email"`
-	DeptId   int    `json:"deptId" comment:"部门" vd:"$>0"`
-	PostId   int    `json:"postId" comment:"岗位"`
-	Remark   string `json:"remark" comment:"备注"`
-	Status   string `json:"status" comment:"状态" default:"1"`
+	UserId    int    `json:"userId" comment:"用户ID"` // 用户ID
+	NickName  string `json:"nickName" comment:"昵称"`
+	Phone     string `json:"phone" comment:"手机号"`
+	RoleId    int    `json:"roleId" comment:"角色ID"`
+	Avatar    string `json:"avatar" comment:"头像"`
+	Sex       string `json:"sex" comment:"性别"`
+	Email     string `json:"email" comment:"邮箱"`
+	Departure string `json:"departure" comment:"单位"`
+	Remark    string `json:"remark" comment:"备注"`
+	Bio       string `json:"bio" comment:"个人简介"`
+	Interest  string `json:"interest" comment:"科研兴趣"`
+	Status    string `json:"status" comment:"状态" default:"1"`
 	common.ControlBy
 }
 
@@ -150,7 +150,6 @@ func (s *SysUserUpdateReq) Generate(model *models.SysUser) {
 	if s.UserId != 0 {
 		model.UserId = s.UserId
 	}
-	model.Username = s.Username
 	model.NickName = s.NickName
 	model.Phone = s.Phone
 	model.RoleId = s.RoleId
@@ -158,12 +157,26 @@ func (s *SysUserUpdateReq) Generate(model *models.SysUser) {
 	model.Sex = s.Sex
 	model.Email = s.Email
 	model.Remark = s.Remark
+	model.Bio = s.Bio
+	model.Interest = s.Interest
+	model.Departure = s.Departure
 	model.Status = s.Status
 }
 
 func (s *SysUserUpdateReq) GetId() interface{} {
 	return s.UserId
 }
+
+//type SysUserUpdateInfoReq struct {
+//	Avatar   string `json:"avatar" comment:"头像"`
+//	Sex      string `json:"sex" comment:"性别"`
+//	Email    string `json:"email" comment:"邮箱" vd:"len($)>0,email"`
+//	DeptId   int    `json:"deptId" comment:"部门" vd:"$>0"`
+//	PostId   int    `json:"postId" comment:"岗位"`
+//	Remark   string `json:"remark" comment:"备注"`
+//	Status   string `json:"status" comment:"状态" default:"1"`
+//	common.ControlBy
+//}
 
 type SysUserById struct {
 	dto.ObjectById
