# docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  dto.ObjectById:
+    properties:
+      id:
+        type: integer
+      ids:
+        items:
+          type: integer
+        type: array
+    type: object
   dto.PassWord:
     properties:
       newPassword:
@@ -105,18 +114,20 @@ definitions:
     properties:
       avatar:
         type: string
+      bio:
+        type: string
       createBy:
         type: integer
-      deptId:
-        type: integer
+      departure:
+        type: string
       email:
+        type: string
+      interest:
         type: string
       nickName:
         type: string
       phone:
         type: string
-      postId:
-        type: integer
       remark:
         type: string
       roleId:
@@ -131,8 +142,6 @@ definitions:
       userId:
         description: 用户ID
         type: integer
-      username:
-        type: string
     type: object
   dto.UpdateStatusReq:
     properties:
@@ -449,6 +458,26 @@ paths:
       tags:
       - 登录日志
   /api/v1/sys-user:
+    delete:
+      description: 删除数据
+      parameters:
+      - description: userId
+        in: path
+        name: userId
+        required: true
+        type: integer
+      - description: body
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ObjectById'
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 删除用户数据
+      tags:
+      - 用户
     get:
       description: 获取JSON
       parameters:
@@ -479,35 +508,6 @@ paths:
       summary: 创建用户
       tags:
       - 用户
-  /api/v1/sys-user/{userId}:
-    delete:
-      description: 删除数据
-      parameters:
-      - description: userId
-        in: path
-        name: userId
-        required: true
-        type: integer
-      responses: {}
-      security:
-      - Bearer: []
-      summary: 删除用户数据
-      tags:
-      - 用户
-    get:
-      description: 获取JSON
-      parameters:
-      - description: 用户编码
-        in: path
-        name: userId
-        required: true
-        type: integer
-      responses: {}
-      security:
-      - Bearer: []
-      summary: 获取用户
-      tags:
-      - 用户
     put:
       consumes:
       - application/json
@@ -525,9 +525,33 @@ paths:
       summary: 修改用户数据
       tags:
       - 用户
-  /api/v1/updateinfo:
-    post:
+  /api/v1/sys-user/{userId}:
+    get:
       description: 获取JSON
+      parameters:
+      - description: 用户编码
+        in: path
+        name: userId
+        required: true
+        type: integer
+      responses: {}
+      security:
+      - Bearer: []
+      summary: 获取用户
+      tags:
+      - 用户
+  /api/v1/updateinfo:
+    put:
+      consumes:
+      - application/json
+      description: 获取JSON
+      parameters:
+      - description: body
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.SysUserUpdateReq'
       responses: {}
       security:
       - Bearer: []
